--- a/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/login/login.component.scss
@@ -35,7 +35,7 @@
 
     .login-form{
         position: relative;
-        top: 20rem;
+        top: 18rem;
         inline-size: 100%;
         margin-top: 3rem;
 
@@ -58,6 +58,16 @@
             color: white;
             background-color: var(--primary-color);
             border-radius: 1rem;
+        }
+
+        .error{
+            block-size: 2rem;
+            margin: 1rem;
+            p{
+                font-family: var(--font-family);
+                color: red;
+                font-size: 1.6rem;
+            }
         }
         
     }
