Improved the day picker
-when picking the day, you can switch between day picker and year picker, so, you don't have to scroll endlessly to look at the expenses back in 25 December 2010

--- a/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
@@ -36,9 +36,9 @@
     }
 }
   
-::ng-deep .mat-calendar-period-button {
+::ng-deep .hide-change-view-button {
     display: none !important;
-  }
+}
 
 .expense-table{
     inline-size: 80rem;
