--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .container{
     display: grid;
-    grid-template-columns: 22rem 1fr 1fr;
+    grid-template-columns: 22rem 1fr 40rem;
     height: 100%;
-    float: left;
     padding-left: 0%;
+    max-inline-size: unset;
 }
 
 .notifications{
