--- a/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.scss
@@ -1,8 +1,26 @@
+div.horizontal-container{
+    inline-size: 40rem;
+    block-size: 7rem;
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+    border-left: 0.1rem solid var(--shadow-color);
+
+    h2{
+        font-size: 2rem;
+        font-weight: 500;
+        margin-right: 3rem;
+        font-family: 'Outfit', sans-serif !important;
+        margin-bottom: 0rem;
+    }
+}
+
 .mat-list{
     inline-size: 40rem;
-    block-size: 80%;
+    block-size: calc(100vh - 7.1rem);
     overflow: auto;
     padding-top: 0rem;
+    border-left: 0.1rem solid var(--shadow-color);
 }
 
 .mat-list-item{
@@ -46,31 +64,18 @@
     margin-bottom: auto;
 }
 
-div.horizontal-container{
-    inline-size: 40rem;
-    block-size: 7rem;
-    display: flex;
-    justify-content: center !important;
-    align-items: center !important;
-
-    h2{
-        font-size: 2rem;
-        font-weight: 500;
-        margin-right: 3rem;
-        font-family: 'Outfit', sans-serif !important;
-        margin-bottom: 0rem;
-    }
-}
-
 .mat-select{
     display: flex;
-    justify-content: center;
     align-items: center;
     inline-size: 8.5rem;
     block-size: 3rem;
     border: 0.1rem solid var(--input-border-color);
     border-radius: 0.8rem;
     font-family: 'Outfit', sans-serif !important;
+} 
+
+::ng-deep .mat-select .mat-select-value{
+    padding-left: 1rem;
 }
 
 mat-divider.outer-divider{
