--- a/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/topbar/topbar.component.html
@@ -2,7 +2,7 @@
     <mat-tab *ngFor="let tab of tabs" [label]="tab">
       <ng-container [ngSwitch]="router.url">
         <ng-container *ngSwitchCase="'/home'">
-          <h1>{{currency + totalAmount}}</h1>
+          <h1>{{reloadService.getCurrentCurrency() + totalAmount}}</h1>
           <div class="b-home">
             <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
           </div>
