added reports page
BIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIG update!
-added a pie chart
-added cards for categories
-added an evolution graph
There are still things to fix
-some fonts need to be changed
-the components should be placed better

--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
@@ -7,8 +7,8 @@
 
 <app-notification class="notifications"></app-notification>
 <router-outlet></router-outlet>
-<div class="container" *ngIf="routes.url != '/login'">
+<div class="container" *ngIf="router.url != '/login'">
     <app-sidebar></app-sidebar>
     <app-topbar></app-topbar>
-    <app-right-sidebar></app-right-sidebar>
+    <app-right-sidebar [ngClass]="{'reports-sidebar': router.url === '/reports', 'home-sidebar': router.url === '/home'}"></app-right-sidebar>
 </div>
