--- a/expenses-manager-frontend/src/main/frontend/src/app/evolution-chart/evolution-chart.component.css
+++ b/expenses-manager-frontend/src/main/frontend/src/app/evolution-chart/evolution-chart.component.css
@@ -1,4 +1,4 @@
-.home-chart {
+.chart-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,17 +7,12 @@
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem var(--shadow-color);
     position: relative;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.reports-chart{
-    background-color: rgba(255, 255, 255, 0.25); 
-    margin: 12px;
+    margin: 1rem;
+    max-width: 80rem;
     box-shadow: 0 0.5rem 1rem var(--shadow-color);
 }
 
-.date-picker-container {
+.title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,12 +58,4 @@
     height: 1rem;
     display: inline-block;
     margin-right: 0.75rem;
-}
-
-.mat-datepicker-popup {
-    position: absolute !important;
-    top: calc(100% + 10px) !important; 
-    left: 50% !important; 
-    transform: translateX(-50%) !important; 
-    z-index: 1000 !important; 
 }
