Fix reload of daily stats and right sidebar
- When adding/editing/deleting an expense, the topbar's totalAmount, daily stats and right sidebar should reload
+ Fixed precision to amount numbers and their display
+ Implemented OnDestroy for components that have subscriptions which are not related to http requests

--- a/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/right-sidebar/right-sidebar.component.html
@@ -14,7 +14,7 @@
     <mat-list-item *ngFor="let item of date.value | keyvalue">
       <img src="../../assets/icons/{{ item.key }}.svg" class="icon-image" alt="icon">
       <h2 class="category">{{ item.key }}</h2>
-      <h2 class="price-tag">{{reloadService.getCurrentCurrency() + item.value}}</h2>
+      <h2 class="price-tag">{{ reloadService.getCurrentCurrency() }} {{ item.value | number:'1.0-2' }}</h2>
       <mat-divider></mat-divider>
     </mat-list-item>
   </div>
