--- a/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.scss
@@ -16,6 +16,15 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1.5rem;
+
+    .hidden-datepicker-input {
+        position: absolute;
+        opacity: 0;
+        inline-size: 0rem;
+        block-size: 0rem;
+        bottom: 0rem;
+        left: 0.5rem;
+      }
 }
 
 .red-divider { 
