Moved components outside of topbar

--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.scss
@@ -1,19 +1,37 @@
-.container{
+.container {
     display: grid;
     grid-template-columns: 22rem 1fr 40rem;
+    grid-template-rows: 7.1rem 1fr;
     height: 100%;
     padding-left: 0%;
     max-inline-size: unset;
+
+    app-sidebar {
+        grid-column: 1;
+        grid-row: 1 / span 2;
+    }
+
+    app-topbar {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    router-outlet {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    app-right-sidebar {
+        grid-column: 3;
+        grid-row: 1;
+        border-left: 1px solid #000; /* Linie între sidebar-ul din dreapta și conținut */
+    }
 }
 
-.notifications{
-    position:fixed;
-    top: 2rem; 
-    left: 2rem; 
+.notifications {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
     inline-size: calc(100% - 4rem);
-    z-index: 1000; 
-}
-
-.reports-sidebar{
-    block-size: 7rem;
+    z-index: 1000;
 }
