--- a/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/app.component.html
@@ -4,11 +4,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
-
+<router-outlet *ngIf="router.url == '/login'"></router-outlet>
 <app-notification class="notifications"></app-notification>
-<router-outlet></router-outlet>
 <div class="container" *ngIf="router.url != '/login'">
     <app-sidebar></app-sidebar>
     <app-topbar></app-topbar>
-    <app-right-sidebar [ngClass]="{'reports-sidebar': router.url === '/reports', 'home-sidebar': router.url === '/home'}"></app-right-sidebar>
+    <app-right-sidebar></app-right-sidebar>
+    <router-outlet></router-outlet>
 </div>
