--- a/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
+++ b/expenses-manager-frontend/src/main/frontend/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-
+<h1>{{reloadService.getCurrentCurrency() + totalAmount}}</h1>
+<div class="b-home">
+    <button mat-button class="add-expense-button" (click)="openDialog()">+</button>
+</div>
+<div style="margin-top: 1rem;">
+    <app-daily-stats></app-daily-stats>
+</div>
