--- a/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/daily-stats/daily-stats.component.scss
@@ -75,3 +75,7 @@
     transform: translateX(-50%) !important; 
     z-index: 1000 !important; 
 }
+
+::ng-deep .hide-change-view-button {
+    display: none !important;
+}
