--- a/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/expense-table/expense-table.component.scss
@@ -23,6 +23,7 @@
 
         .date-picker-button{
             position: relative;
+            white-space: nowrap; /* Previne împărțirea textului */
         }
 
         .hidden-datepicker-input {
@@ -32,7 +33,11 @@
             block-size: 0rem;
             bottom: 1.2rem;
             left: 0.5rem;
-          }
+        }
+
+        ::ng-deep .mat-date-range-input-container {
+            display: none; /* Ascunde separatorul dintre Start date și End date */
+        }
     }
 }
   
@@ -100,6 +105,7 @@
         padding: 0;
       }
     }
+
 }
 
 .paginator{
