--- a/expenses-manager-frontend/src/main/frontend/src/app/datepicker/datepicker.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/datepicker/datepicker.component.scss
@@ -1,8 +1,8 @@
 .datepicker-wrapper {
-    inline-size: 80rem;
     block-size: 4rem;
     margin-top: 5.6rem;
     margin-left: 1.4rem;
+    margin-right: 1.4rem;
     box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
     position: relative;
 
