--- a/expenses-manager-frontend/src/main/frontend/src/app/expenses/expenses.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/expenses/expenses.component.scss
@@ -1,10 +1,10 @@
 
 
 .expense-table{
-    inline-size: 80rem;
+    min-inline-size: calc(100% - 2.8rem);
     margin-left: 1.4rem;
     margin-top: 1.6rem;
-    margin-right: 5rem;
+    margin-right: 1.4rem;
     font-family: var(--font-family);
     box-shadow: 0rem 0rem 2rem rgba(0, 0, 0, 0.2);
 
@@ -63,11 +63,12 @@
 }
 
 .paginator{
-    inline-size: 80rem;
+    min-inline-size: calc(100% - 2.8rem);
     block-size: 4rem;
     margin-top: 1.6rem;
     margin-left: 1.4rem;
     margin-bottom: 2rem;
+    margin-right: 1.4rem;
     display: flex;
     justify-content: center;
     
