--- a/expenses-manager-frontend/src/main/frontend/src/app/reports/reports.component.scss
+++ b/expenses-manager-frontend/src/main/frontend/src/app/reports/reports.component.scss
@@ -1,30 +1,36 @@
 .container {
+    margin-block: 2.4rem;
     display: flex;
-    flex-direction: row; 
-    block-size: 30rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row{
+    inline-size: 100%;
+}
+
+.overview {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card {
     margin: 1rem;
-}
-
-.datepicker{
-    margin: 3rem;
-
-}
-.stats {
-    inline-size: 40rem !important;
-    block-size: 30rem !important; 
-    margin: 2rem;
-  }
-
-.overview{
+    padding: 1.6rem;
+    box-shadow: 0 0.5rem 1rem var(--shadow-color);
+    border-radius: 0.8rem;
     display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
-      inline-size: 60rem;
+    justify-content: space-between;
 }
-
-.card{
-    margin: 1rem;
-    inline-size: 12.5rem;
-    block-size: 12.5rem;
+.card-title {
+    margin-block-end: 3.3rem;
+    font-size: 1.6rem;
+}
+.card-subtitle {
+    font-weight: 600;
+    font-size: 2.4rem;
+}
+.card-title,
+.card-subtitle {
+    font-family: var(--font-family);
 }
